# hexagonal-architecture

./: Cargo.toml  Makefile  README.md  hexarch.db
.sqlx/: query-ae9174f60d4e657bfed4592066a3bd7949849c920d357bcdece04ec00b044ce1.json
migrations/: 20240728161821_create_authors_table.sql
src/lib/: config.rs  lib.rs  routes.rs
src/lib/domain/author/: models.rs  ports.rs
src/lib/domain/author/models/: author.rs
src/lib/inbound/: http.rs
src/lib/inbound/http/: handlers.rs  responses.rs
src/lib/inbound/http/handlers/: create_author.rs
src/lib/outbound/: sqlite.rs
