[package]
name = "hexagonal-architecture"
version = "0.1.0"
edition = "2021"

[lib]
name = "hexarch"
path = "src/lib/lib.rs"

[[bin]]
path = "src/bin/server/main.rs"
name = "hexarch_server"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
derive_more = "0.99.18"
serde = { version = "1.0.204", features = ["std", "derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "1.0.61"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
dotenv = "0.15.0"